revisi part 3
